tests/success/pointer.moc
asm("
    CALL (LB) f_main
    HALT
")

int * malloc(int size) {
    asm("
        LOAD (1) %size
        SUBR Malloc
        RETURN (1) 1
    ");
}

void main() {
    int** p = (int**) malloc(1);
    *p = malloc(4);
    **p = 42;

    *p = *p + 1;
    **p = 7;

    void* pp = p;
    int* ppp = pp;
}
