tests/error/types-7.moc
int* malloc(int size) {
}

void main() {
    int** p = (int**) malloc(1);
    *p = malloc(4);
    **p = 'a';
}
